src/test/ui/type-alias-impl-trait/issue-57700.full_tait.stderr
warning: the feature `type_alias_impl_trait` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/issue-57700.rs:5:32
   |
LL | #![cfg_attr(full_tait, feature(type_alias_impl_trait))]
   |                                ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #63063 <https://github.com/rust-lang/rust/issues/63063> for more information

error: type parameter `impl Deref<Target = Self>` is part of concrete type but not used in parameter list for the `impl Trait` type alias
  --> $DIR/issue-57700.rs:19:58
   |
LL |       fn foo(self: impl Deref<Target = Self>) -> Self::Bar {
   |  __________________________________________________________^
LL | |
LL | |         self
LL | |     }
   | |_____^

error: aborting due to previous error; 1 warning emitted

